# Loupe

./: .gitignore  .loupeignore  README.md  loupe.manifest.yaml
benchmarks/results/: 20260712T152842Z.json  20260712T164443Z-learned-ranker-comparison.json  20260714T175714Z.json
cli/: pyproject.toml
cli/loupe_cli/: main.py
cli/tests/: test_cli.py
core/: pyproject.toml
core/loupe_core/adapters/: __init__.py
core/loupe_core/adapters/fastapi/: config_drift.py  contract_diff.py  migration_drift.py  routes.py  smells.py
core/loupe_core/analysis/: __init__.py  dead_code.py  duplicates.py
core/loupe_core/bandit/: thompson.py
core/loupe_core/context/: __init__.py  claude_md_generator.py  co_retrieval.py  scope.py  session_notes.py
core/loupe_core/conventions/: mining.py
core/loupe_core/eval/: backfill.py  feedback.py  harness.py  metrics.py  mine_history.py
core/loupe_core/governor/: budget.py  eviction.py  knapsack.py  session.py
core/loupe_core/graph/: builder.py  centrality.py  clustering.py  impact.py  test_linkage.py  traversal.py
core/loupe_core/parsing/: ast_utils.py  extractor.py  incremental.py  languages.py  schema.py
core/loupe_core/retrieval/: churn.py  fusion.py  hyde.py  lexical.py  mmr.py  ranker.py  rerank.py  router.py  semantic.py
core/loupe_core/storage/: vector_store.py
core/scripts/: inspect_symbols.py  query_symbols.py  simulate_session.py
core/tests/: conftest.py  test_ast_utils.py  test_backfill.py  test_budget.py  test_centrality.py  test_churn.py  test_claude_md_generator.py  test_clustering.py  test_co_retrieval.py  test_config_drift.py  test_contract_diff.py  test_conventions.py  test_dead_code.py  test_duplicates.py  test_eviction.py  test_extractor.py  test_feedback.py  test_fusion.py  test_graph_resolution.py  test_harness.py  test_hyde.py  test_impact.py  test_incremental.py  test_knapsack.py  test_learned_ranker_harness.py  test_lexical.py  test_metrics.py  test_migration_drift.py  test_mine_history.py  test_mmr.py  test_ranker.py  test_rerank.py  test_router.py  test_scope.py  test_semantic.py  test_session.py  test_session_notes.py  test_smells.py  test_temporal_split.py  test_test_linkage.py  (+3 more)
core/tests/fixtures/e1/: models.py  services.py  utils.py
core/tests/fixtures/e2/: test_utils.py  utils.py
core/tests/fixtures/e4/: handlers.py  imports_mixed.py
core/tests/fixtures/phase0/: async_and_multiline.py  multi_decorator.py  nested_class.py  no_docstring_edge_cases.py  simple_module.py
core/tests/fixtures/phase1/: circular_a.py  circular_b.py  handlers.py  models.py  services.py
core/tests/fixtures/phase2/: labeled_queries.yaml
core/tests/fixtures/phase5/: build_fixture_repo.py
core/tests/fixtures/phase7_smells/: callers_of_hub.py  circular_a.py  circular_b.py  db.py  models.py  n_plus_one.py  notifications.py  routes_blocking.py  routes_business_logic.py  routes_params.py  routes_response_model.py  service_layer.py  validators.py  widely_used.py
lens/: README.md  index.html  package-lock.json  package.json
lens/src/: App.tsx  api.ts  index.css
lens/src/components/: Layout.tsx  LoupeMark.tsx  PageHeader.tsx  StateViews.tsx
lens/src/graph/: ForceGraph.ts
lens/src/hooks/: useApi.ts  useConnectionStatus.ts  useGoToShortcuts.ts
lens/src/pages/: Conventions.tsx  Feedback.tsx  Overview.tsx  SymbolGraph.tsx  Telemetry.tsx
mcp_server/: pyproject.toml
mcp_server/loupe_mcp_server/: bootstrap.py  compute_profiles.py  config.py  dashboard.py  experimental_gate.py  ignore.py  main.py  mcp_tools.py  resources.py  session_manager.py  session_notes_manager.py  telemetry.py
mcp_server/tests/: test_bootstrap.py  test_compute_profiles.py  test_config.py  test_experimental_gate.py  test_feedback.py  test_ignore.py  test_indexer_worker.py  test_integration.py  test_mcp_tools.py  test_session_manager.py
scaffold/: pyproject.toml
scaffold/loupe_scaffold/: elicitation.py
scaffold/tests/: test_elicitation.py
server/: pyproject.toml
server/app/: bootstrap.py  cli.py  config.py  conventions.py  feedback.py  indexer_worker.py  main.py  mcp_tools.py
server/tests/: test_bootstrap.py  test_cli.py  test_feedback.py  test_indexer_worker.py  test_integration.py  test_mcp_tools.py  test_session_manager.py
