[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loupe_cli"]

[project]
name = "loupe_cli"
version = "0.1.0"
description = "The loupe command-line entry point: init/index/serve/status/retrain, thin wrappers over loupe_core and loupe_mcp_server"
requires-python = ">=3.11"
dependencies = [
    "uvicorn[standard]>=0.30",
]
# loupe_core and loupe_mcp_server aren't published anywhere pip can resolve a
# bare name from — both installed separately, editable, from ../core and
# ../mcp_server into the same venv (see scripts/setup_dev.sh). Standalone by
# design (docs/PhaseX/MASTER_ROADMAP.md's restructure decision): this package
# depends on loupe_mcp_server, it doesn't contain it — argument parsing and
# output formatting stay free of any FastAPI/MCP-specific code.

[project.scripts]
loupe = "loupe_cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
